<resources>
    <string name="app_name">MGI Faculty</string>
    <string name="nav_header_title">Faculty Name</string>
    <string name="nav_header_subtitle">Registered Mobile Number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="smsServiceUrl">http://sms.masterwebwork.com/api/sendhttp.php?</string>
    <string name="smsServiceApiKey">4804AfMvfSSOpSun59378d35</string>
    <string name="smsServiceSenderId">LOGSTC</string>
    <string name="subject">Subject</string>
    <string name="subjectCap">SUBJECT</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="mobileNumber">Registered Mobile Number</string>
    <string name="password">Password</string>
    <string name="errInvalidMobNum">Mobile Number is not registered</string>
    <string name="errInvalidPassword">Invalid Password</string>
    <string name="emailId">Email Id</string>
    <string name="support">Support</string>
    <string name="appinfo">App Info</string>
    <string name="aboutUs">About Institute</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="unavailable">Not Available</string>
    <string name="errInvalidEmail">Invalid Email Id</string>
    <string name="errInvalidFirstName">Invalid First Name</string>
    <string name="errInvalidLastName">Invalid Last Name</string>
    <string name="calendar">Academic Calendar</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="establishmentYear">Establishment Year</string>
    <string name="event">Event</string>
    <string name="update">UPDATE</string>
    <string name="competitionWinner">Competition Winner</string>
    <string name="selectFeedbackCategoryCap">SELECT FEEDBACK CATEGORY</string>
    <string name="feedback">Feedback</string>
    <string name="studentFees">Fees</string>
    <string name="totalFeeCap">TOTAL FEES</string>
    <string name="paymentOptionCap">PAYMENT OPTION</string>
    <string name="pendingFeesCap">PENDING FEES</string>
    <string name="attendance">Attendance</string>
    <string name="createdDateCap">CREATED DATE</string>
    <string name="dueDateCap">DUE DATE</string>
    <string name="competition">Competition</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="descriptionCap">DESCRIPTION</string>
    <string name="holiday">Holiday</string>
    <string name="attachment_file_cap">ATTACHMENT</string>
    <string name="note_to_teacher">Note to Teacher</string>
    <string name="academicCalendar">Academic Plan</string>
    <string name="assignment">Assignment</string>
    <string name="assignmentCap">ASSIGNMENT</string>
    <string name="totalPresentCap">TOTAL CLASS</string>
    <string name="percentageCap">PERCENTAGE</string>
    <string name="updateFeedbackCategoryCap">UPDATE FEEDBACK CATEGORY</string>
    <string name="addNoteToTeacherCap">ADD NOTE TO TEACHER</string>
    <string name="editNoteToTeacherCap">EDIT NOTE TO TEACHER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Hi Faculty!</string>
    <string name="verify_cap">VERIFY</string>
    <string name="fees_cap">FEES</string>
    <string name="date_cap">DATE</string>
    <string name="code_cap">SUBJECT CODE</string>
    <string name="total_cap">TOTAL</string>
    <string name="present_cap">PRESENT</string>
    <string name="exam_cap">EXAM NAME</string>
    <string name="total_marks_cap">TOTAL MARKS</string>
    <string name="time_cap">TIME</string>
    <string name="cut_off_marks_cap">CUT OFF MARKS</string>
    <string name="subject_name_cap">SUBJECT NAME</string>
    <string name="examSeriesNameCap">EXAM SERIES NAME</string>
    <string name="marks_cap">MARKS OBTAINED</string>
    <string name="status_cap">STATUS</string>
    <string name="result_cap">RESULT</string>
    <string name="select_batch_cap">SELECT CLASS</string>
    <string name="select_time_table_cap">SELECT TIME TABLE</string>
    <string name="attendance_date_cap">SELECT DATE</string>
    <string name="attendance_taken_cap">UPDATE ATTENDANCE</string>
    <string name="mark_attendance_cap">TAKE ATTENDANCE</string>
    <string name="parent_cap">STUDENT</string>
    <string name="faculty_cap">FACULTY</string>
    <string name="not_expecting_resp_cap">NOT EXPECTING RESPONSE</string>
    <string name="expecting_resp_cap">EXPECTING RESPONSE</string>
    <string name="all_batch_cap">ALL CLASSES</string>
    <string name="select_batches_cap">SELECT CLASSES</string>
    <string name="select_event_type_cap">SELECT EVENT TYPE</string>
    <string name="dress_code_cap">DRESS CODE</string>
    <string name="from_date_cap">FROM DATE</string>
    <string name="to_date_cap">TO DATE</string>
    <string name="select_subject_cap">SELECT SUBJECT</string>
    <string name="created_date_cap">CREATED DATE</string>
    <string name="due_date_cap">DUE DATE</string>
    <string name="add_attach_cap">ATTACH FILE</string>
    <string name="delete_attach_cap">DELETE FILE</string>
    <string name="select_staff_type_cap">SELECT STAFF TYPE</string>
    <string name="add_homeWork_cap">ADD HOMEWORK</string>
    <string name="speech_prompt">Please speak!</string>
    <string name="speech_not_supported">Speech to text NOT supported on your device.</string>
    <string name="total_class_cap">TOTAL CLASS</string>
    <string name="select_student_cap">SELECT STUDENT</string>
    <string name="add_message_cap">ADD MESSAGE</string>
    <string name="edit_cap">EDIT</string>
    <string name="delete_cap">DELETE</string>
    <string name="select_students_cap">SELECT STUDENTS</string>
    <string name="batch_cap">CLASS</string>
    <string name="exam_series_cap">EXAM SERIES</string>
    <string name="exam_date_cap">EXAM DATE</string>
    <string name="takeAttendance">Take Attendance</string>
    <string name="mySchedule">My Schedule</string>
    <string name="studentAttendance">Student Attendance</string>
    <string name="studentWiseAttendance">Student Wise Attendance</string>
    <string name="colleagues">Colleagues</string>
    <string name="scoreCard">Score Card</string>
    <string name="achievement">Achievement</string>
    <string name="institute">Institute</string>
    <string name="attendanceSummary">Attendance Summary</string>
    <string name="dayWiseAttendance">Day Wise Attendance</string>
    <string name="timeTable">Time table</string>
    <string name="examSchedule">Exam Schedule</string>
    <string name="add_message">Add Message</string>
    <string name="home_work">Assignment</string>
    <string name="errInvalidAddress">Invalid address</string>
    <string name="errInvalidSubject">Invalid subject</string>
    <string name="errInvalidDesc">Invalid description</string>
    <string name="errInvalidBatchSelect">Please select any one class.</string>
    <string name="errInvalidStudentSelect">Please select any one student.</string>
    <string name="emptyMark">Enter the marks</string>
</resources>