<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".FragmentAddEvent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorRed"
                android:textSize="10sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbParent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/parent_cap"
                    android:textColor="@color/colorBlack" />

                <CheckBox
                    android:id="@+id/cbFaculty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/faculty_cap"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupResponseType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioNotResponse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/not_expecting_resp_cap"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioResponse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expecting_resp_cap"
                    android:textSize="15sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupBatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioAllBatch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_batch_cap"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/radioSelectBatch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/select_batch_cap"
                    android:textSize="15sp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/llBatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_batches_cap"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/llSelectBatch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_event_color"
                    android:drawablePadding="3dp"
                    android:text="@string/select_event_type_cap"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_event_type_cap"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/colorGrey">

                <EditText
                    android:id="@+id/etEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey"
                    android:hint="@string/event"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/colorGrey">

                <EditText
                    android:id="@+id/etDressCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGrey"
                    android:hint="@string/dress_code_cap"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorGrey">

                    <EditText
                        android:id="@+id/etFromDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorGrey"
                        android:enabled="false"
                        android:gravity="left"
                        android:hint="@string/from_date_cap"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivFromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center"
                    android:clickable="true"
                    android:src="@drawable/ic_calendar_small"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorGrey">

                    <EditText
                        android:id="@+id/etToDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorGrey"
                        android:enabled="false"
                        android:gravity="left"
                        android:hint="@string/to_date_cap"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center"
                    android:clickable="true"
                    android:src="@drawable/ic_calendar_small" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/descriptionCap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@drawable/rectangle"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/ibMic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingEnd="5dp"
                    android:src="@drawable/ic_mic_black" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_btn_back"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>